# demo_tables

./: TEMPLATE_BREAKPOINT_GUIDE.md  TEMPLATE_DEBUG_GUIDE.md  manage.py  pyproject.toml  pytest.ini  requirements.txt
demo_tables/: asgi.py  settings.py  urls.py  wsgi.py
django_tableaux/: tests.py
movies/: admin.py  filters.py  forms.py  insert_data.sql  models.py  tables.py  views.py
movies/management/commands/: insert_data.py
movies/migrations/: 0003_auto_20251026_1008.py
movies/static/: demo.css  dropdown.css  pico_reset.css
movies/templates/movies/: action_modal.html  action_page.html  base.html  base_bootstrap.html  base_new.html  custom_action.html  debug_template.html  interactive.html  list.html  message.html  messages.html  movie_detail.html  movie_modal.html  navbar.html  navbar_bootstrap.html  options_dialog.html  pico_navbar.html  play.html  table.html  table_component.html  table_new.html  template_breakpoint_demo.html  template_breakpoint_test.html
movies/templatetags/: __init__.py  debug_tags.py  movie_tags.py
tables_pro/: apps.py  tables.py  tests.py  utils.py  views.py
tables_pro/static/tables_pro/js/: media_query.js  table_functions.js  tables_pro.js
tables_pro/templates/tables_pro/: action_toolbar.html  block_content.html  block_head.html  block_table.html  bootstrap4.html  button.html  cell_form.html  error_tooltip.html  modal_filter.html  render_rows.html  render_table_data.html  tables_pro.html  width_request.html
tables_pro/templates/tables_pro/toolbar/: _actions.html  _buttons.html  _columns.html  main.html
tables_pro/templatetags/: tables_pro.py
templates/django_tableaux/basic/: toolbar_filter.html
