[project]
name = "demo-tables"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    #"django-bootstrap4>=24.4",
    "django>=5.1.5",
    "django-tableaux",
    "pytest-django>=4.11.1",
    "pytest>=8.4.1",
]

[tool.uv.sources]
django-tableaux = { path = "C:/Users/is/PycharmProjects/django_tableaux", editable = true}



#[dependency-groups]
#dev = [
#    "django-tableaux>=0.6.11",
#]
