[project]
name = "demo-tables"
version = "0.1.0"
description = "Django demo application showcasing advanced table functionality with django-tableaux"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["django", "tables", "demo", "web-application"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Django",
    "Framework :: Django :: 5.1",
]

dependencies = [
    "django>=5.1.5",
    "django-bootstrap4>=24.4",
    "django-bootstrap5",
    "django-flatpickr>=2.0.3",
    "django-tableaux",
]

[project.urls]
Homepage = "https://github.com/yourusername/demo-tables"
Repository = "https://github.com/yourusername/demo-tables.git"
Documentation = "https://github.com/yourusername/demo-tables#readme"

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-django>=4.11.1",
    "pytest-cov>=4.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "django-stubs>=4.0.0",
    "pre-commit>=3.0.0",
]
test = [
    "pytest>=8.4.1",
    "pytest-django>=4.11.1",
    "pytest-cov>=4.0.0",
    "factory-boy>=3.2.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
]

[tool.uv.sources]
django-tableaux = { path = "C:/Users/is/PycharmProjects/django_tableaux", editable = true}
django-flatpickr = { git="https://github.com/ianastewart/django-flatpickr.git", branch="master"}
#[tool.uv.extra-build-dependencies]
#demo-tables = ["uv.build"]
#[build-system]
#requires = ["uv"]
#build-backend = "uv.build"


[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "django.*",
    "bootstrap4.*",
    "django_tables2.*",
    "django_filters.*",
    "django_htmx.*",
    "django_tableaux.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "demo_tables.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=movies",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["movies"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/venv/*",
    "*/env/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
